Show current meds, allergies and conditions in patient view (show only)
